--- a/SampleMvxMapPlugin.Droid/SampleMvxMapPlugin.Droid.csproj
+++ b/SampleMvxMapPlugin.Droid/SampleMvxMapPlugin.Droid.csproj
@@ -45,6 +45,7 @@
     <AndroidLinkMode>SdkOnly</AndroidLinkMode>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Java.Interop" />
     <Reference Include="Mono.Android" />
     <Reference Include="Mono.Android.Export" />
     <Reference Include="mscorlib" />
